<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sihsalus</groupId>
    <artifactId>sihsalus-core-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Sihsalus Core Parent</name>
    <description>Modernized Sihsalus core foundation with OpenMRS compatibility boundaries.</description>
    <url>https://github.com/sihsalus/sihsalus-core</url>

    <modules>
        <module>sihsalus-openmrs-bom</module>
        <module>sihsalus-core-api</module>
        <module>sihsalus-core-liquibase</module>
        <module>sihsalus-fhir2</module>
        <module>sihsalus-webservices-rest</module>
        <module>sihsalus-initializer</module>
        <module>sihsalus-module-authentication</module>
        <module>sihsalus-module-oauth2login</module>
        <module>sihsalus-module-idgen</module>
        <module>sihsalus-module-addresshierarchy</module>
        <module>sihsalus-module-emrapi</module>
        <module>sihsalus-module-o3forms</module>
        <module>sihsalus-module-reporting</module>
        <module>sihsalus-module-billing</module>
        <module>sihsalus-module-stockmanagement</module>
        <module>sihsalus-module-datafilter</module>
        <module>sihsalus-module-fua</module>
        <module>sihsalus-module-imaging</module>
        <module>sihsalus-module-attachments</module>
        <module>sihsalus-module-patientdocuments</module>
        <module>sihsalus-module-cohort</module>
        <module>sihsalus-module-queue</module>
        <module>sihsalus-module-appointments</module>
        <module>sihsalus-module-teleconsultation</module>
        <module>sihsalus-module-bedmanagement</module>
        <module>sihsalus-module-metadatamapping</module>
        <module>sihsalus-module-openconceptlab</module>
        <module>sihsalus-module-sihsalusinterop</module>
        <module>sihsalus-module-event</module>
        <module>sihsalus-module-calculation</module>
        <module>sihsalus-module-htmlwidgets</module>
        <module>sihsalus-module-reportingrest</module>
        <module>sihsalus-module-serialization-xstream</module>
        <module>sihsalus-module-ordertemplates</module>
        <module>sihsalus-module-patientflags</module>
        <module>sihsalus-module-legacyui</module>
        <module>sihsalus-core-boot</module>
    </modules>

    <licenses>
        <license>
            <name>Mozilla Public License 2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/sihsalus/sihsalus-core.git</connection>
        <developerConnection>scm:git:https://github.com/sihsalus/sihsalus-core.git</developerConnection>
        <url>https://github.com/sihsalus/sihsalus-core</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>21</maven.compiler.release>

        <maven.version.minimum>3.9.6</maven.version.minimum>
        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
        <maven.enforcer.plugin.version>3.5.0</maven.enforcer.plugin.version>
        <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>3.5.2</maven.failsafe.plugin.version>
        <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
        <spotbugs.plugin.version>4.8.6.6</spotbugs.plugin.version>
        <spotless.plugin.version>2.43.0</spotless.plugin.version>
        <spring.boot.version>4.0.6</spring.boot.version>
        <postgresql.version>42.7.11</postgresql.version>
        <h2.version>2.3.232</h2.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openmrs</groupId>
                <artifactId>openmrs-bom</artifactId>
                <version>3.0.0-SNAPSHOT</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <proc>full</proc>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <OPENMRS_APPLICATION_DATA_DIRECTORY>${project.build.directory}/openmrs-application-data</OPENMRS_APPLICATION_DATA_DIRECTORY>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven.failsafe.plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <OPENMRS_APPLICATION_DATA_DIRECTORY>${project.build.directory}/openmrs-application-data</OPENMRS_APPLICATION_DATA_DIRECTORY>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.plugin.version}</version>
                    <configuration>
                        <java>
                            <googleJavaFormat/>
                            <removeUnusedImports/>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                        </java>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-toolchain</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[21,22)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[${maven.version.minimum},)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
